# py-aozora-data

./: .dockerignore  .flake8  .gcloudignore  .gitignore  .pre-commit-config.yaml  .pylintrc  Cargo.toml  DATA_FORMAT.md  Dockerfile  LICENSE  Makefile  README.md  build.rs  cloudbuild.yaml  csv_main.py  gemini.md  pid_main.py  pyproject.toml  requirements.txt  run_spiders.py  scrapinghub.yml  scrapy.cfg  setup.py
aozora_data/: convert_all.py  download_all.py  html_convert_all.py  model.py
aozora_data/algolia/: indexer.py
aozora_data/db/: db_rdb.py  firestore.py
aozora_data/importer/: csv_importer.py  main.py  pid_importer.py
aozora_data/sjis_to_utf8/: __init__.py  cli.py  converter.py  gaiji_table.py
aozora_data/text_to_html/: cli.py  converter.py
aozora_data/text_to_xhtml/: cli.py  converter.py
css/: aozora.css
db_import/: items.py  main.py  middlewares.py  model.py  pipelines.py  run_spiders.py  settings.py
db_import/db/: db_rdb.py
db_import/importer/: csv_importer.py  pid_importer.py
db_import/spiders/: __init__.py  csv_spider.py  pid_spider.py
docs/: ARCHITECTURE.md  SPEC_CSS.md  SPEC_METADATA.md  SPEC_TEXT_TO_XHTML.md
scripts/: benchmark_sjis.py  generate_gaiji_table.py  upload_to_r2.py
src/: lib.rs
tests/: test_csv_importer.py  test_issue_handakuten.py  test_issue_repro.py  test_issue_repro_2.py  test_model.py  test_rdb.py  test_sjis_to_utf8.py  test_text_to_html.py
tests/data/: 010003.json  book_059898.json  test.csv  test.db  test.json
