[package]
name = "aozora_data_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "_sjis_to_utf8"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.3", features = ["extension-module"] }
encoding_rs = "0.8.35"
regex = "1.11.1"
phf = { version = "0.11", features = ["macros"] }
lazy_static = "1.5.0"

[build-dependencies]
phf_codegen = "0.11"
regex = "1.11.1"
