[tool.poetry]
name = "py-db-import"
version = "2.0.0"
description = "Import Aozora-bunko data to a DB"
authors = ["Ken Sato <ksato9700@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "db_import"}]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.21.0"
pydantic = "^1.10.2"
lxml = "^4.9.1"
requests = "^2.28.1"
SQLAlchemy = "^1.4.41"


[tool.poetry.group.dev.dependencies]
black = {version = "^22.8.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
