[tool.poetry]
name = "py-aozora-data"
version = "2.0.1"
description = "Aozora-bunko data model"
authors = ["Ken Sato <ksato9700@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "aozora_data"}]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.21.0"
pydantic = "^1.10.2"
lxml = "^4.9.1"
requests = "^2.28.1"
SQLAlchemy = "^1.4.41"
cssselect = "^1.1.0"


[tool.poetry.group.dev.dependencies]
black = {version = "^22.8.0", allow-prereleases = true}
pytest = "^7.1.3"
requests-mock = "^1.10.0"
flake8 = "^5.0.4"
pre-commit = "^2.20.0"
mypy = "^0.981"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
